cmake_minimum_required(VERSION 3.21)
project(Override C)

set(CMAKE_C_STANDARD 11)

add_executable(Override
#    level00/source.c
#    level01/source.c
#    level02/source.c
#    level03/source.c
#    level04/source.c
#    level05/source.c
#    level06/source.c
#    level07/source.c
#    level08/source.c
    level09/source.c
)
